# panda

./: .env.example  .goreleaser.yaml  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.proxy  Makefile  README.md  config.example.yaml  docker-compose.yaml  go.mod  go.sum  goreleaser.panda.Dockerfile  goreleaser.proxy.Dockerfile  goreleaser.server.Dockerfile  proxy-config.example.yaml
tests/eval/: .env.example  .gitignore  README.md  conftest.py  langfuse_dataset.py  pyproject.toml  pytest.ini
tests/eval/agent/: __init__.py  openai_agent.py  opencode_agent.py  wrapper.py
tests/eval/cases/: __init__.py  baseline_all.yaml  basic_queries.yaml  blobs.yaml  blocks.yaml  coverage.yaml  execution.yaml  loader.py  mev.yaml  multi_step.yaml  networks.yaml  smoke.yaml  validators.yaml  visualizations.yaml
tests/eval/config/: __init__.py  evaluator.py  settings.py
tests/eval/harden/: auditor.py  charts.py  codex.py  journal.py  loop.py  promptfoo_eval.py  proposer.py  report.py  runner.py  scoring.py  subject.py
tests/eval/harness/: __init__.py  logsetup.py  promptfoo_eval.py  runner.py  scoring.py  subject.py  trace.py
tests/eval/promptfoo/: provider.py
tests/eval/sandbox/: opencode.Dockerfile
tests/eval/scripts/: __init__.py  _panda_env.py  ci_auth.py  ci_pages.py  ci_report.py  eval.py  harden.py  hydrate.py  release_report.py  release_scorecard.py  repl.py  report_template.html
tests/eval/studio/: README.md  __init__.py  __main__.py  case_pr.py  fixes.py  preflight.py  server.py  verify_runner.py
tests/eval/tests/: test_agent_host_env.py  test_basic_queries.py  test_cases_loader.py  test_harden_auditor.py  test_harden_charts.py  test_harden_codex_filter.py  test_harden_journal.py  (+9 more)
(+318 files in other folders)
