[project]
name = "panda-eval"
version = "0.1.0"
description = "LLM evaluation harness for ethpandaops-panda server"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "ruamel.yaml>=0.18.0", # comment-preserving round-trip for `scripts.hydrate`
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "openai>=1.0.0", # For OpenRouter evaluator support
    "langfuse>=2.0.0", # LLM observability and trace viewing
    "opencode-ai",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
panda-eval = "scripts.eval:main"
panda-harden = "scripts.harden:main"
panda-hydrate = "scripts.hydrate:main"
panda-repl = "scripts.repl:main"
panda-langfuse = "scripts.langfuse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "agent", "cases", "scripts", "harness", "harden", "promptfoo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.uv.sources]
opencode-ai = { git = "https://github.com/anomalyco/opencode-sdk-python" }

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
studio = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
